--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -4,6 +4,16 @@ canvas{
   left:0;
 }
 
+:root {
+  --dark-bg: rgba(15, 15, 15, 0.95);
+  --spacing: 350px;
+
+  font-family: new-order, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 main{
   position:absolute;
 
